Implement building factories based on the most valuable resource; Adding free citizens to factories. Remove extra fields from buildings and managers