@@ -1,7 +1,6 @@
 package ge.rodichev.civilization.entity;
 
 import java.util.*;
-import java.util.stream.*;
 
 import ge.rodichev.civilization.entity.consts.*;
 
@@ -16,22 +15,17 @@ public class Citizens extends ArrayList<Citizen> {
     }
 
     public Citizens filterByAge(Age age) {
-        return new Citizens(this.stream().filter(citizen -> citizen.getAge() == age).collect(Collectors.toList()));
+        return new Citizens(this.stream().filter(citizen -> citizen.getAge() == age).toList());
     }
 
     public Citizens filterByHealth(Health health) {
-        return new Citizens(this.stream().filter(citizen -> citizen.getHealth() == health).collect(Collectors.toList()));
-    }
-
-    public void getFullStats() {
-        String.format("All citizens: %d\n" +
-                "", this.size());
+        return new Citizens(this.stream().filter(citizen -> citizen.getHealth() == health).toList());
     }
 
     public String getAgeStats() {
         StringBuilder builder = new StringBuilder();
         for (Age value : Age.values()) {
-            builder.append(String.format("Age status: %s. Citizens count: %d\n", value.toString(), this.filterByAge(value).size()));
+            builder.append(String.format("Age status: %s. Citizens count: %d%n", value.toString(), this.filterByAge(value).size()));
         }
         return builder.toString();
     }
@@ -39,8 +33,12 @@ public class Citizens extends ArrayList<Citizen> {
     public String getHealthStats() {
         StringBuilder builder = new StringBuilder();
         for (Health value : Health.values()) {
-            builder.append(String.format("Health status: %s. Citizens count: %d\n", value.toString(), this.filterByHealth(value).size()));
+            builder.append(String.format("Health status: %s. Citizens count: %d%n", value.toString(), this.filterByHealth(value).size()));
         }
         return builder.toString();
+    }
+
+    public Citizens getFreeToWorkCitizens() { //TODO add filtering by age and health
+        return new Citizens(this.stream().filter(citizen -> citizen.getFactory() == null).toList());
     }
 }
